tests/cases/scc/error/0019-kr_names.c.res
./tests/cases/scc/error/0019-kr_names.c:13:15:	error:   redeclaration of f with incompatible type int (int, int, int).
./tests/cases/scc/error/0019-kr_names.c:10:5:	info:    previous declaration had type int (int, int).
exit code 1
